# test

./: .gitignore  README.md  package-lock.json
REMS-Scheduling-Optimizer-INFORMS/: README.md
REMS-Scheduling-Optimizer-INFORMS/Achraf/: FeasibleSchedulingSolver.ipynb
REMS-Scheduling-Optimizer-INFORMS/REMSModel/: REMSModel.py  REMSModelwPenalties.py  result_interpretation.py
REMS-Scheduling-Optimizer-INFORMS/rems-model-web-app/: package-lock.json  package.json  tailwind.config.js
REMS-Scheduling-Optimizer-INFORMS/rems-model-web-app/src/: index.css
REMS-Scheduling-Optimizer-INFORMS/rems-model-web-app/src/components/: ExportToCalendarButton.tsx  NotFoundPage.tsx  ScheduleTable.tsx  UploadContainer.tsx
backend/: main.py
backend/src/api/services/: model_input_parser_service.py
rems-model-web-app/: .gitignore  package.json  tsconfig.app.json  tsconfig.node.json
rems-model-web-app/backend/: main.py  pyproject.toml  requirement.txt
rems-model-web-app/backend/src/api/: __init__.py
rems-model-web-app/backend/src/api/routes/: schedules.py
rems-model-web-app/backend/src/api/services/: google_calendar_exporter_service.py  google_sheets_service.py  gurobi_scheduler_optimizer_service.py
rems-model-web-app/src/: App.tsx  index.css  main.tsx
rems-model-web-app/src/components/: ExportToCalendarButton.tsx  GeneratedSchedule.tsx  UploadContainer.tsx
rems-model-web-app/src/context/: AuthProvider.tsx
rems-model-web-app/src/types/: schedule.ts
rems-model-web-app/src/util/: DateParser.ts
src/: App.css
src/components/: Navbar.tsx
src/services/: axios.ts
(+2 files in other folders)
